fixed some aligning issues with the css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,10 @@ body {
 	text-align: center;
 }
 
+.story-display, .bad-lib-display {
+	text-align: center;
+}
+
 /* Diana Styling */
 /*body {
     background-image: url("https://images.freecreatives.com/wp-content/uploads/2015/10/free-lined-paper-texture.jpg");
